Update title and content of test5.html

--- a/test5.html
+++ b/test5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>KH Explore - 氛圍過濾</title>
+    <title>KH Explore - 靈感小工具</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -93,12 +93,13 @@
                 { name: '浪漫氣氛 💕', key: '浪漫', tags: ['夕陽', '海濱', '漁港', '夜景', '海'] },
                 { name: '熱鬧好玩 🔥', key: '熱鬧', tags: ['音演', '展覽', '音樂', '市集', '娛樂', '熱鬧'] },
                 { name: '安靜文青 📖', key: '安靜', tags: ['咖啡廳', '藝術', '文化', '歷史', '安靜'] },
-                { name: '活潑戶外 🏃', key: '活潑', tags: ['休閒', '運動', '露營', '公園', '活潑'] }
+                { name: '室內放鬆 📖', key: '室內', tags: ['咖啡廳', '藝術', '文化', '歷史', '展覽', '室內'] },
+                { name: '戶外休閒 🏃', key: '活潑', tags: ['休閒', '運動', '露營', '公園', '散步'] }
             ],
             '驚喜': [
                 { name: '全部', key: '全部', tags: [] },
                 { name: '手搖飲 🥤', key: '飲', tags: ['飲', '茶', '咖啡', '果汁'] },
-                { name: '甜點點心 🥯', key: '點', tags: ['點', '蛋糕', '麵包', '小吃', '食'] }
+                { name: '甜點點心 🥯', key: '點', tags: ['點', '蛋糕', '麵包', '小吃', '派', '餐'] }
             ]
         };
 
@@ -278,4 +279,5 @@
         window.onload = fetchData;
     </script>
 </body>
+
 </html>
