Fix HTML encoding issues in test5.html

--- a/test5.html
+++ b/test5.html
@@ -111,7 +111,7 @@
          * 3. 抓取資料
          */
         function fetchData() {
-            Papa.parse(config.csvUrl, {
+            Papa.parse(config.csvUrl + "&t=" + Date.now(), {
                 download: true,
                 header: false,
                 complete: function(results) {
@@ -281,3 +281,4 @@
 </body>
 
 </html>
+
