--- a/test5.html
+++ b/test5.html
@@ -77,7 +77,7 @@
          * 1. 資料設定
          */
         const config = {
-            csvUrl: "https://docs.google.com/spreadsheets/d/1ur6DxhLHX_hmOhBdx37eJSExtegrQ-T15uGBxzuMPKc/export?format=csv"
+            csvUrl: "https://docs.google.com/spreadsheets/d/1ur6DxhLHX_hmOhBdx37eJSExtegrQ-T15uGBxzuMPKc/edit?usp=sharing&output=csv"
         };
 
         const backupData = [
@@ -281,4 +281,5 @@
 </body>
 
 </html>
+
 
